[package]
name = "spatialos-specs"
version = "0.1.0"
authors = ["Sam Snyder <samsnyder96@gmail.com>"]
edition = "2018"

[dependencies]
spatialos-sdk = { git = "http://github.com/johnpmayer/spatialos-sdk-rs.git", branch = "feature/specs-integration" }
specs = "0.14.3"
hibitset = { version = "0.5.3", default-features = false }
lazy_static = "1.3.0"