[package]
name = "example"
version = "0.0.0"
authors = [
    "Sam Snyder <samsnyder96@gmail.com"
]
edition = "2018"

[dependencies]
spatialos-sdk = { git = "http://github.com/johnpmayer/spatialos-sdk-rs.git", branch = "feature/specs-integration" }
futures = "0.1.25"
uuid = { version = "0.7", features = ["v4"] }
structopt = "0.2.14"
rand = "0.6.5"
tap = "0.3.0"
specs = "0.14.3"
spatialos-specs = { path = "../"}
